# Loja-Online-com-Python--Django-SQLite3

./: .breakpoints  .coverage  coveragerc  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
cart/: cart.py  forms.py  frete.py  urls.py  views.py
frete/: apps.py
mysite/: settings.py  urls.py
orders/: admin.py  forms.py  models.py  views.py
orders/migrations/: 0001_initial.py
products/: models.py
products/migrations/: 0001_initial.py  0002_frete.py
templates/: base.html
templates/cart/: cart_detail.html
templates/orders/: order_form.html
users/migrations/: 0001_initial.py
