[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
django-autoslug = "^1.9.8"
django-model-utils = "^4.1.1"
django-debug-toolbar = "^3.2.1"
django-widget-tweaks = "^1.4.8"
localflavor = "^1.9"
django-crispy-forms = "^1.12.0"
[tool.poetry.dev-dependencies]
